--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -14,6 +14,22 @@ enable-early-logistic-system=Enable early logistic system
 inserter-speed-multiplier=Inserter speed multiplier
 enable-quick-start=Enable quick start
 
+[mod-setting-description]
+robot-carry-size-multiplier=Example: 2 for double carrying capacity.
+robot-speed-multiplier=Examples: 0.5 for half speed or 2 for double speed.
+robot-battery-size-multiplier=Larger values mean robots can travel further before recharging, but recharging also takes longer.
+robot-energy-usage-multiplier=Values less than 1 make robots more energy-efficient.\n\nSet to 0 for robots that never need to recharge.
+roboport-logistics-radius-multiplier=Expand (or shrink) the size of each roboport's logistics area (the orange square).  Also affects maximum distance between roboports on the same network (max distance of the yellow dotted line).\nDoes not affect personal roboports.\n\nExamples: 0.5 for half radius, 2 for double radius.
+roboport-construction-radius-multiplier=Expand (or shrink) the size of each roboport's construction area (the green square).\nDoes not affect personal roboports.\n\nExamples: 0.5 for half radius, 2 for double radius.
+roboport-charging-rate-multiplier=Larger values mean robots can charge faster, but roboports also consume more energy during charging (more Watts).  Does not affect personal roboports.
+robot-stack-size=Stack size of robots in inventory and storage.
+robot-health-multiplier=Examples: 0.5 for half health or 2 for double health.
+enable-early-construction-robots=Construction robots, roboports, storage chests, and passive provider chests are available immediately and have simplified recipes.  Also adds early technologies for character logistic slots, character logistic trash slots, worker robot speed, and worker robot cargo size.
+enable-early-logistic-robots=Logistic robots, roboports, storage chests, and passive provider chests are available immediately and have simplified recipes.  Also adds early technologies for character logistic slots, character logistic trash slots, worker robot speed, and worker robot cargo size.
+enable-early-logistic-system=Start with Logistic System technology, with simplified recipes for active provider chests, requester chests, and buffer chests.
+inserter-speed-multiplier=Modifies arm movement speed of all inserters.\n\nExamples: 0.5 for half speed or 2 for double speed.
+enable-quick-start=Start the game with stone furnaces, steam engines, electric drills, inserters, assemblers, labs, construction and logistic robots, roboports, provider and requester chests, and related accessories.
+
 [technology-name]
 flying=Advanced flight
 robotics=Advanced robotics
